--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,9 @@ body {
     display: block;
     margin-top: 10px; }
   @media screen and (max-width: 600px) {
+    .side-two{
+    min-height:400px
+    }
     .side-one {
       width: 100%;
       padding: 5px 0px; }
