--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
     margin-top: 10px; }
   @media screen and (max-width: 600px) {
     .side-two{
-    min-height:400px
+    min-height:400px;
     }
     .side-one {
       width: 100%;
