--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,10 @@
-<<<<<<< HEAD
-*,
-*::before,
-*::after {
+@import url("https://fonts.googleapis.com/css?family=Karla");
+
+* {
+  padding: 0px;
+  margin: 0px;
   box-sizing: border-box;
-}
-* {
-  box-sizing: inherit;
-}
-
-* {
-  padding: 0px;
-  margin: 0px;
-=======
-
-@import url('https://fonts.googleapis.com/css?family=Karla');
-
-
-*{
-  padding: 0px;
-  margin: 0px;
-  box-sizing:border-box;
-font-family:karla;
->>>>>>> refs/remotes/origin/master
+  font-family: karla;
 }
 
 body {
@@ -71,7 +54,6 @@ body {
   align-content: center;
   text-align: center;
   -ms-flex-line-pack: distribute;
-<<<<<<< HEAD
   align-content: space-around;
 }
 .side-one a {
@@ -79,31 +61,23 @@ body {
   margin-top: 10px;
 }
 @media screen and (max-width: 600px) {
+  .side-two {
+    min-height: 400px;
+  }
   .side-one {
     width: 100%;
     padding: 5px 0px;
   }
-=======
-  align-content: space-around; }
-  .side-one a {
-    display: block;
-    margin-top: 10px; }
-  @media screen and (max-width: 600px) {
-    .side-two{
-    min-height:400px;
-    }
-    .side-one {
-      width: 100%;
-      padding: 5px 0px; }
-      .side-one a {
-        display: inline-block;
-        cursor: pointer; } }
->>>>>>> refs/remotes/origin/master
   .side-one a {
     display: inline-block;
     cursor: pointer;
   }
 }
+.side-one a {
+  display: inline-block;
+  cursor: pointer;
+}
+
 .side-one a {
   text-decoration: none;
   background-color: #333;
@@ -188,23 +162,14 @@ body {
 }
 
 .media-block {
-<<<<<<< HEAD
   line-height: 50px;
 }
 .media-block a {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-size: 2rem;
+  font-size: 1rem;
 }
-=======
-  line-height: 50px; }
-  .media-block a {
-    display: block;
-    text-decoration: none;
-    color: #fff;
-    font-size: 1rem; }
->>>>>>> refs/remotes/origin/master
 
 @media screen and (max-width: 600px) {
   .side-one {
