--- a/css/style.css
+++ b/css/style.css
@@ -1,216 +1,110 @@
 @import url("https://fonts.googleapis.com/css?family=Karla");
 
+html {
+  box-sizing: border-box;
+}
 * {
+  box-sizing: inherit;
   padding: 0px;
   margin: 0px;
-  box-sizing: border-box;
   font-family: karla;
 }
+/* #333; 
+  #962626
 
-body {
-  background: #333;
-  color: #fff;
-  scroll-behavior: smooth;
-}
+*/
 
 .container {
-  background-color: #fff;
-  height: auto;
-  color: #333;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 350px 750px;
+  grid-gap: 30px;
+  background: #333;
+  overflow: hidden;
 }
-@media screen and (max-width: 600px) {
-  .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-}
-
 .side-one {
-  min-height: auto;
-  background-color: #962626;
-  width: 60%;
-  padding: 0 10px;
-  color: white;
-  float: left;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  background: #962626;
+  padding: 20px;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -ms-flex-line-pack: center;
   align-content: center;
+  justify-content: center;
   text-align: center;
-  -ms-flex-line-pack: distribute;
-  align-content: space-around;
+  border-right: solid 2px white;
+  /* grid-template-rows: repeat(2, auto); */
 }
-.side-one a {
-  display: block;
+.side-one .pro-img img {
+  border-radius: 50%;
+  width: 200px;
+  border: 2px white solid;
+  margin-bottom: 20px;
+}
+.side-one .pro-info {
+  padding: 5px;
+  font-size: 1.3rem;
+}
+.side-one .feature {
   margin-top: 10px;
 }
-@media screen and (max-width: 600px) {
-  .side-two {
-    min-height: 400px;
-  }
-  .side-one {
-    width: 100%;
-    padding: 5px 0px;
-  }
-  .side-one a {
-    display: inline-block;
-    cursor: pointer;
-  }
+.side-one .feature a {
+  text-decoration: none;
+  color: #f4f4f4;
+  padding: 5px;
+  background: #333;
 }
-.side-one a {
-  display: inline-block;
+
+/* Side Two Styles */
+.side-two {
+  padding: 10px;
+}
+.side-two .contact a {
+  display: inline;
+  margin-left: 5rem;
+  margin-bottom: 2rem;
+  color: white;
+  text-decoration: none;
   cursor: pointer;
 }
-
-.side-one a {
-  text-decoration: none;
-  background-color: #333;
-  color: #fff;
-  padding: 5px;
-  margin-top: 3px;
+.side-two .contact a:hover {
+  color: #962626;
 }
-.side-one a:hover {
-  background: #962626;
-  -webkit-transition: 1s;
-  transition: 1s;
+.side-two .contact i {
+  font-size: 4rem;
+}
+.slide {
+  position: absolute;
+  top: 35%;
+  opacity: 0;
 }
 
-.pro-img {
-  width: 200px;
-  margin: 30px 0px;
-  background: #fff;
-  border-radius: 50%;
-  padding: 5px;
-}
-.pro-img img {
-  width: 100%;
-  border-radius: 50%;
-}
-
-.pro-info h3 {
-  font-size: 2em;
-}
-
-.pro-info p {
-  margin-bottom: 5px;
-}
-
-.feature {
-  margin-top: 5px;
-  -ms-flex-line-pack: distribute;
-  align-content: space-around;
-}
-
-.side-two {
-  height: auto;
-  background-color: #333;
-  width: 100%;
-  color: white;
-  padding: 10px;
-  line-height: 30px;
-  font-size: 20px;
+.slide.current {
+  opacity: 1;
+  transition: opacity ease 1s;
 }
 
 .bio {
-  margin: 100px auto;
-  padding: 10px;
-  opacity: 0;
-  position: relative;
-  bottom: 0px;
 }
 
-.important {
-  background: rgba(255, 255, 255, 0.479);
-  color: #962626;
-  font-weight: 800;
-  padding: 2px;
-}
-
-.contact {
-  margin: 100px auto;
-  opacity: 0;
-  position: relative;
-  bottom: 300px;
-}
-
-.blog {
-  position: relative;
-  bottom: 700px;
-  opacity: 0;
-}
-
-.current {
-  opacity: 1;
-  -webkit-transition: opacity ease-in 1s;
-  transition: opacity ease-in 1s;
-}
-
-.media-block {
-  line-height: 50px;
-}
-.media-block a {
-  display: block;
-  text-decoration: none;
-  color: #fff;
-  font-size: 1rem;
-}
-
-@media screen and (max-width: 600px) {
+/* Media Queries Max-width 500px */
+@media screen and (max-width: 500px) {
+  .container {
+    display: block;
+  }
+  .slide {
+    position: absolute;
+    top: 60%;
+  }
   .side-one {
-    min-height: 400px;
-  }
-  .contact {
-    opacity: 0;
-    position: relative;
-    bottom: 350px;
-  }
-  .blog {
-    position: relative;
-    opacity: 0;
-    bottom: 500px;
-    margin-top: 0px;
-  }
-  .bio {
-    position: relative;
-    bottom: 80px;
+    border: none;
   }
 }
-
-.current {
-  opacity: 1;
-  -webkit-transition: opacity ease-in 1s;
-  transition: opacity ease-in 1s;
-}
-
-blockquote {
-  border-left: 2px solid #fff;
-  padding: 18px;
-  color: #962626;
-  font-family: "Courier New", Courier, monospace;
-  font-weight: 800;
-
-  background: rgba(0, 0, 0, 0.425);
-}
-.list p {
-  padding: 18px;
-}
-.list-block {
-  list-style-type: georgian;
-  margin-left: 20px;
+@media screen and (max-width: 768px) {
+  .container {
+    display: block;
+  }
+  .slide {
+    position: absolute;
+    top: 60%;
+  }
 }
