--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Karla");
 
 :root {
-
   /* HEX */
   --color1: #ffcdb2ff;
   --color2: #ffb4a2ff;
@@ -9,7 +8,7 @@
   --color4: #b5838dff;
   --color5: #6d6875ff;
   --color6: #fb656aff;
-  --transition: all 300ms ease-in-out
+  --transition: all 300ms ease-in-out;
 }
 
 html {
@@ -40,7 +39,7 @@ html {
 
 .pro-img {
   /* width: ; */
-  height: 300px
+  height: 300px;
 }
 
 .pro-img img {
@@ -56,14 +55,24 @@ html {
   color: var(--color6);
 }
 
+.pro-info h3 {
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  font-size: 1.3rem;
+  color: #f0f0f0;
+}
+.pro-info p {
+  font-weight: 800;
+}
 .feature {
   text-align: center;
   padding: 1rem 0;
+  margin-top: 1rem;
 }
 
 .feature a {
   text-decoration: none;
-  padding: .5rem;
+  padding: 0.5rem;
   color: var(--color2);
 }
 
@@ -72,7 +81,7 @@ html {
 }
 
 .feature a.active {
-  border: solid 1px var(--color6)
+  border: solid 1px var(--color6);
 }
 
 .bio p {
@@ -81,13 +90,15 @@ html {
 
 .emphasis {
   background: var(--color6);
-  padding: .4rem;
+  padding: 0.4rem;
   color: var(--color1);
   font-weight: 800;
 }
-
+.blog p {
+  width: 95%;
+}
 .slide {
-  visibility: hidden;
+  transform: translateX(-500px);
   transition: all 300ms;
   position: absolute;
 }
@@ -98,7 +109,7 @@ html {
 
 .list-block {
   list-style-type: none;
-  margin-top: .9rem;
+  margin-top: 0.9rem;
 }
 
 .lists {
@@ -110,19 +121,20 @@ html {
 }
 
 .slide.current {
-  visibility: visible;
+  transform: translateX(0px);
 }
 
 .message-box {
   width: 100%;
-
 }
 
 .message-box h3 {
   font-weight: 800;
   color: var(--color6);
   padding: 1rem;
-
+}
+.message-box form {
+  width: 95%;
 }
 
 label {
@@ -132,7 +144,7 @@ label {
 }
 
 input {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 input,
@@ -141,8 +153,8 @@ button {
   width: 100%;
   outline: 0;
   border: var(--color6) solid 1px;
-  padding: .6rem;
-  margin-bottom: .5rem;
+  padding: 0.6rem;
+  margin-bottom: 0.5rem;
 }
 
 button {
@@ -151,18 +163,32 @@ button {
   transition: var(--transition);
 }
 
-
 button:hover {
   background: var(--color6);
   color: #fff;
 }
 
-@media(min-width:500px) {
+#name-display {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
+
+.jingle {
+  background: var(--color6);
+  padding: 0.5rem;
+  font-weight: 500;
+  margin-left: 0.5rem;
+  color: #fff;
+  text-shadow: var(--color1);
+}
+
+@media (min-width: 500px) {
   #app {
     height: 100vh;
     display: flex;
     overflow: hidden;
-
   }
 
   .side-one {
@@ -176,7 +202,6 @@ button:hover {
   .pro-img {
     width: 50%;
     height: 30%;
-
   }
 
   .pro-img img {
@@ -185,11 +210,10 @@ button:hover {
   }
 
   .slide {
-    transform: translateY(-500px);
+    transform: translateY(-800px);
   }
 
   .slide.current {
     transform: translateY(0px);
   }
-
 }
